styles.css
*{
    margin: 0px;
    box-sizing: border-box;
}

.m-plus-rounded-1c-regular {
    font-family: "M PLUS Rounded 1c", serif;
    font-weight: 400;
    font-style: normal;
  }

#mainGrid{

    display: grid;
    grid-template-columns: 1fr 2fr 2fr 2fr 2fr;
    grid-template-rows: 1fr 2fr 2fr 2fr;
    width: 100vw;
    height: 100vh;
    background-color: rgb(229, 234, 235);
    
}

#sideBar{

    grid-area: 1 / 1 / 5 / 2;
    background-color: #1992D4;
    font-weight: bold;
    color: white;

    & a{
        color: white;
        text-decoration: none;
    }

}

#sideBarBreakdown{
    margin: 5%;
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr 6fr 3fr 7fr;
    gap: 15%;
    font-size: large;

    & a:hover{
        background-color: #1e87c0;
        border-radius: 4px;
        box-shadow: 0px 0px 3px 4px #1e87c0;
    }

    & a span{
        padding-right: 10px;
    }

}

#sideBarHeader{

    font-size: larger;

}

#sideBarFirst{
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
    gap: 10px;

}

#sideBarSecond{
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr 1fr 1fr ;
    gap: 10px;

}

#topBar{
    grid-column: 2 / 6;
    display: flex;
    flex-direction: column;
    background-color: white;
    box-shadow: 2px 0px 10px grey;
    padding: 20px;
    font-size: larger;
    font-weight: bold;
}

#topBarTop{
    display: flex;
    justify-content: space-between;
    
    & input{
        border: none;
        border-radius: 30px;
        background-color: rgb(229, 234, 235);
        width:80%
    }
    
    & img{
        border-radius: 50%;
        margin-left: 5px;
        margin-right: 5px;
    }

    & #topBarTopLeft{
        width: 50%;
    }
}

#topBarBottom{
    display: flex;
    justify-content: space-between;
}

#topBarBottomLeft{
    display: flex;
    align-items: center;
    & img{
        border-radius: 50%;
    }
    & #welcomeUserHolder p{
        margin: 0px 10px 0px;
    }
    & #welcomeMessage{
        font-size: 0.7em;
    }
}

#topBarBottomRight{
    display: flex;
    align-items: center;
    gap: 5px;

    & button{
        border-radius: 60px;
        border: none;
        width: 90px;
        height: 45px;
        text-align: center;
        background-color: #1992D4;
        color: white;

        &:hover{
            background-color: #1e87c0;
        }
    }
}

#mainContent{
    grid-column: 2 / 5;
    grid-row: 2 / 5;
    margin: 20px;
    overflow-y: auto;
}

#cards{
    display: flex;
    gap: 10px;
    flex-wrap: wrap;
    align-content: center;
    justify-content: center;
}

.card{
     background-color: white;
     border-radius: 5px;
     border-left: 6px solid orange;
     width: 400px;
     height: 200px;
     padding: 0px 15px 15px 15px;
     box-shadow: 2px 2px 3px 1px grey;

     &:hover{
        box-shadow: 2px 2px 3px 1px rgb(160, 160, 160);
     }

     & h4{
        font-weight: bold;
     }

     & p{
        height: 55%;
        color: grey;
        overflow: hidden;

     }
}

.classButtons{
    display: flex;
    justify-content: end;
    gap: 10px;
     & img:hover{
        cursor:pointer;
        border-radius: 50%;
        animation: highlight 0.2s 1 forwards linear;
     }
}

@keyframes highlight{
    to{
        background-color: lightgrey;
        padding: 1px;
    }

}

#sideBarRight{
    grid-area: 2 / 5 / 5 / 6;
    margin-top: 20px;
}

#announcementCard{
     background-color: white;
     border-radius: 5px;
     width: 400px;
     height: 300px;
     padding: 0px 25px 25px 25px;
     box-shadow: 2px 2px 3px 1px grey;
     display: flex;
     flex-direction: column;
     justify-content: center;

     &:hover{
        box-shadow: 2px 2px 3px 1px rgb(160, 160, 160);
     }

     & hr{
        margin-top: 10px;
        margin-bottom: 10px;
     }

     & h5{
        font-weight: bolder;
        
     }

     & p{
        margin: 0px;
        padding: 0px;
        color: grey;
        font-weight: bold;

     }
}

#trendingCard{
    background-color: white;
    border-radius: 5px;
    width: 400px;
    height: 300px;
    padding: 0px 15px 15px 15px;
    box-shadow: 2px 2px 3px 1px grey;

    &:hover{
       box-shadow: 2px 2px 3px 1px rgb(160, 160, 160);
    }

    & h4{
       font-weight: bold;
    }

    & p{
       height: 55%;
       color: grey;
       overflow: hidden;

    }
}

